media quey for header jump bug

--- a/advertiser_media.css
+++ b/advertiser_media.css
@@ -344,6 +344,10 @@
         width: 80%;
     }
 
+    .hero-pop-up-displayed {
+        padding-top: 108px;
+    }
+
     .contacts-us-popup-top h1 {
         font-size: 18px;
     }
